--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>David Spencer | UX</title>
   <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <nav></nav>
