--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <nav></nav>
   <h1>Under construction</h1>
-  <a href="design-thinking-workshop">Design Thinking Workshop</a>
+  <a href="design-thinking-workshop.html">Design Thinking Workshop</a>
 </body>
 </html>
