--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -11,9 +11,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="index.html">Home</li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="projects" href="#">Projects</a></li>
+      <li><a class="about" href="#">About</a></li>
     </ul>
   </nav>
   <section class="hero">
