--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -7,19 +7,20 @@
   <title>Design Thinking</title>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700|Roboto:300,400,700" rel="stylesheet">
 </head>
 <body>
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a class="projects" href="#">Projects</a></li>
+      <li><a class="projects current" href="#">Projects</a></li>
       <li><a class="about" href="#">About</a></li>
     </ul>
   </nav>
   <section class="hero">
-    <h1>Title</h1>
-    <h2>Subtitle</h2>
-    <p class="tags">Tags</p>
+    <h1>Hosting a <br>Design Thinking Workshop</h1>
+    <h2>Reflections and what I learnt</h2>
+    <span class="tags">UX </span><span class="tags">Design Thinking</span>
   </section>
   <section>
     <!-- <div class="container"> -->
