--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
   <title>David Spencer | UX</title>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
+  
 </head>
 <body>
-  <nav></nav>
-  <h1>Under construction</h1>
-  <a href="design-thinking-workshop.html">Design Thinking Workshop</a>
+  <nav>
+    <ul>
+      <li><a class="current" href="index.html">Home</a></li>
+      <li><a class="projects" href="design-thinking-workshop.html">Projects</a></li>
+      <li><a class="about" href="#">About</a></li>
+    </ul>
+  </nav>
+  <section>
+    <h1>Under construction</h1>
+    <a href="design-thinking-workshop.html">Design Thinking Workshop</a>
+  </section>
 </body>
 </html>
