--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -18,9 +18,11 @@
     </ul>
   </nav>
   <section class="hero">
+    <div class="content-block">
     <h1>Hosting a <br>Design Thinking Workshop</h1>
     <h2>Reflections and what I learnt</h2>
     <span class="tags">UX </span><span class="tags">Design Thinking</span>
+    </div>
   </section>
   <section>
     <!-- <div class="container"> -->
@@ -35,25 +37,25 @@
         <p>We were sat around a large table (large for 4 people) with easy access to a large wall space to stick up and share the ideas we worked through.
         </p>
         <figure>
-          <img class="responsive-h"                src="https://via.placeholder.com/800x500" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/PlanDesignThinkingWorkshop.jpg" alt="Hand drawn plan of the room for the design thinking workshop">
+          <figcaption>Plan of the room for the design thinking workshop, workspaces highlighted in green.</figcaption>
         </figure>
         <h3>Agenda</h3>
         <p>Before the workshop I gave the participants homework; to be aware of their next public transport journey, consider the steps one needs to take and any frustration or delight that arises on the journey. I did this to help them prepare for the workshop, to give them every chance to easily express their experiences on the topic: “How can we improve public transportation?”.
         </p>
         <h4>Intro <span>20 min</span></h4>
-        <p>As mentioned above, the participants knew each other very well so I didn’t bother with icebreaker games. I did however start with a presentation on design thinking to give an overview of what was to be undertaken slides can be found <a href="#">here</a>. In hindsight I think it would have been more beneficial to break up the design thinking presentation throughout the workshop. For instance, talk about each stage just before actually doing each stage… e.g. Talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
+        <p>As mentioned above, the participants knew each other very well so I didn’t bother with icebreaker games. I did however start with a presentation on design thinking to give an overview of what was to be undertaken slides can be found <a target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">here</a>. In hindsight I think it would have been more beneficial to break up the design thinking presentation throughout the workshop. For instance, talk about each stage just before actually doing each stage… e.g. Talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/800x300" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/slides.jpg" alt="Hand drawn plan of the room for the design thinking workshop">
+          <figcaption>Slides from the presentation on design thinking, you can view them <a target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">here</a>.</figcaption>
         </figure>
         <h4>Empathy <span>20 min</span></h4>
         <p>The participants interviewed each other in pairs about their last public transport experience and took notes of pain points and quotes on post-its in order to share their findings with the group.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/800x500" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/interviews.jpg" alt="Participants interviewing each other during the design workshop during the Empathy stage.">
+          <figcaption>Empathy interviews about public transport.</figcaption>
         </figure>
         <p>After hearing all the experiences we voted on a particular experience to make a journey map together. In this particular case we decided on the journey of a tourist using public transport in Madrid, two of the participants had recently had this experience and all participants had had this experience before.
         </p>
@@ -61,21 +63,21 @@
         <p>We found the user’s biggest pain points from the journey map and from these we came up with &lsquo;How Might We&rsquo; questions to define the problem. We voted on &lsquo;How might we make navigating the Madrid metro easier for tourists?&rsquo; to take to the Ideate stage.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/400x800" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/JourneyMap.jpg" alt="Journey map of a user's experience.">
+          <figcaption>The journey map made by the group of pain points around public transport in Madrid as a tourist.</figcaption>
         </figure>
         <h4>Ideate <span>20 min</span></h4>
         <p>Before moving on to the ideate stage I conducted a little drawing exercise, each participant needed to draw a portrait of their partner in 10 seconds. I copied this idea from Justin Ferrell of Stanford d.School when he did this in his workshop with The Irish Times. I like how this brings some fun into the activity and also reduces the participant’s expectation about the quality of the drawings required for this exercise.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/800x500" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/portraits.jpg" alt="">
+          <figcaption>Two of the portraits from the 10 second drawing exercise.</figcaption>
         </figure>
         <p>I gave the participants a worksheet with four boxes to draw in and a space to write the How Might We question, this was to help the group to quickly begin and keep the problem statement in mind. They were given 7 minutes to come up with 4 ideas.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/800x500" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/ideate.jpg" alt="">
+          <figcaption>The worksheets for the ideate stage of the design thinking workshop.</figcaption>
         </figure>
         <p>After the time was up they presented their ideas to the group and voted on what to prototype. The selected idea to explore was ‘better signage at stations’.
         </p>
@@ -83,8 +85,8 @@
         <p>The participants explored the idea individually  and were given an assortment of coloured paper, tape, scissors and glue to build their prototype. All of the participants chose to draw their prototype.
         </p>
         <figure>
-          <img class="responsive-h" src="https://via.placeholder.com/800x500" alt="">
-          <figcaption>I am a caption of the image above</figcaption>
+          <img class="responsive-h" src="img/whole_wall.jpg" alt="Prototypes being displayed for the group.">
+          <figcaption>The wall with all the work when presenting the prototypes.</figcaption>
         </figure>
         <h4>Testing <span>15 min</span></h4>
         <p>The testing phase of the workshop was limited to the participants, but ideas kept flowing during the presentation of the prototypes and minor modifications were made with feedback from the group.
