--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -92,13 +92,13 @@
         <p>The testing phase of the workshop was limited to the participants, but ideas kept flowing during the presentation of the prototypes and minor modifications were made with feedback from the group.
         </p>
         <h3>Feedback</h3>
-        <h4>Positives</h4>
+        <h4><span>Positives</span></h4>
         <ul>
           <li>‘Thought provoking, you see the problem in a new light.’</li>
           <li>‘It was interesting tackling a problem with a group that was cross-generational.’</li>
           <li>‘I liked that we were building on each other’s ideas to arrive somewhere new.’</li>
         </ul>
-        <h4>What they would change</h4>
+        <h4><span>What they would change</span></h4>
         <ul>
           <li>‘More time to tackle more of the problems and test the prototypes outside of the group.’</li>
         </ul>
