--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -103,7 +103,7 @@
           <li>‘More time to tackle more of the problems and test the prototypes outside of the group.’</li>
         </ul>
         <h3>Personal Reflection</h3>
-        <p>In terms of the structure, next time I would not introduce the whole design thinking process at the beginning. I would introduce key ideas and rules for design thinking and then before each step I would introduce that step only (talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.). I think this would increase clarity for the task at hand.
+        <p>In terms of the structure, next time I would not introduce the whole design thinking process at the beginning. To increase clarity, I would introduce the key ideas and rules for design thinking and then before each step I would introduce that step only e.g. talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
         </p>
         <p>The worksheet I make for the Ideate phase worked well, next time I would include worksheets in the Empathise stage too, to make the process of interviewing each other more streamlined and informative.
         </p>
