cards and sass file separation

--- a/index.html
+++ b/index.html
@@ -7,19 +7,72 @@
   <title>David Spencer | UX</title>
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
-  
+  <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700|Roboto:300,400,700" rel="stylesheet">
+
 </head>
 <body>
   <nav>
     <ul>
       <li><a class="current" href="index.html">Home</a></li>
-      <li><a class="projects" href="design-thinking-workshop.html">Projects</a></li>
-      <li><a class="about" href="#">About</a></li>
+      <li><a class="" href="design-thinking-workshop.html">Projects</a></li>
+      <li><a class="" href="#">About</a></li>
     </ul>
   </nav>
-  <section>
-    <h1>Under construction</h1>
-    <a href="design-thinking-workshop.html">Design Thinking Workshop</a>
+  <section class="hero">
+    <!-- <h1>Under construction</h1> -->
+    <h1>Hi my name is David and I am a <span>UX</span> and <span>Graphic Design</span> professional.</h1>
+    <h2>I enjoy exploring a project's full potential throughout the whole process in a variety of roles.</h2>
+  </section>
+  <section class="projects">
+    <h3>Projects</h3>
+    <!-- <a class="card" href="design-thinking-workshop.html">Design Thinking Workshop</a> -->
+    <div class="card">
+      <a href="design-thinking-workshop.html">
+        <div class="card-img">
+          <img src="https://via.placeholder.com/400x300" alt="">
+        </div>
+        <div class="card-text">
+          <p>Design Thinking Workshop</p>
+          <span>UX</span><span>Design Thinking</span>
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <div class="card-img">
+        <img src="https://via.placeholder.com/400x300" alt="">
+      </div>
+      <div class="card-text">
+        <p>Placeholder project</p>
+        <span>UX</span><span>Ethnographic Research<span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-img">
+        <img src="https://via.placeholder.com/400x300" alt="">
+      </div>
+      <div class="card-text">
+        <p>Placeholder project</p>
+        <span>UX</span><span>Ethnographic Research<span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-img">
+        <img src="https://via.placeholder.com/400x300" alt="">
+      </div>
+      <div class="card-text">
+        <p>Placeholder project</p>
+        <span>UX</span><span>Ethnographic Research<span>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-img">
+        <img src="https://via.placeholder.com/400x300" alt="">
+      </div>
+      <div class="card-text">
+        <p>Placeholder project</p>
+        <span>UX</span><span>Ethnographic Research<span>
+      </div>
+    </div>
   </section>
 </body>
 </html>
