--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -13,8 +13,8 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a class="projects current" href="#">Projects</a></li>
-      <li><a class="about" href="#">About</a></li>
+      <li><a class="current" href="#">Projects</a></li>
+      <li><a class="" href="#">About</a></li>
     </ul>
   </nav>
   <section class="hero">
