--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -13,7 +13,7 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a class="current" href="#">Projects</a></li>
+      <li><a class="current" href="index.html#projects">Projects</a></li>
       <li><a class="" href="#">About</a></li>
     </ul>
   </nav>
