--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav>
     <ul>
       <li><a class="current" href="index.html">Home</a></li>
-      <li><a class="" href="design-thinking-workshop.html">Projects</a></li>
+      <li><a class="" href="index.html#projects">Projects</a></li>
       <li><a class="" href="#">About</a></li>
     </ul>
   </nav>
@@ -23,7 +23,7 @@
     <h1>Hi my name is David and I am a <span>UX</span> and <span>Graphic Design</span> professional.</h1>
     <h2>I enjoy exploring a project's full potential throughout the whole process in a variety of roles.</h2>
   </section>
-  <section class="projects">
+  <section id="projects" class="projects">
     <h3>Projects</h3>
     <!-- <a class="card" href="design-thinking-workshop.html">Design Thinking Workshop</a> -->
     <div class="card">
