--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <li><a class="" href="#">About</a></li>
     </ul>
   </nav>
-  <section class="hero">
+  <section class="content-block hero">
     <!-- <h1>Under construction</h1> -->
     <h1>Hi my name is David and I am a <span>UX</span> and <span>Graphic Design</span> professional.</h1>
     <h2>I enjoy exploring a project's full potential throughout the whole process in a variety of roles.</h2>
   </section>
-  <section id="projects" class="projects">
+  <section id="projects" class="projects content-block">
     <h3>Projects</h3>
     <!-- <a class="card" href="design-thinking-workshop.html">Design Thinking Workshop</a> -->
     <div class="card">
