--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -18,13 +18,14 @@
     </ul>
   </nav>
 
-    <div class="content-block hero">
+    <header class="content-block hero">
     <h1>Hosting a <br>Design Thinking Workshop</h1>
     <h2>Reflections and what I learnt</h2>
     <span class="tags">UX </span><span class="tags">Design Thinking</span>
-    </div>
+  </header>
 
     <!-- <div class="container"> -->
+    <main>
       <div class="content-block">
         <h3>Challenge</h3>
         <p>The goal was to host a design thinking workshop for participants new to design thinking within the space of 2 hours. The overall question we explored was, "How can we improve public transportation?". This was my first design thinking workshop and the following is a summary of the design thinking workshop and reflections to help with future ones.
@@ -123,7 +124,7 @@
         <p>Overall I was happy with how the workshop went, particularly with the motivation and the sense of pride the participants had in the outcome of the workshop, I feel everyone came away with a positive attitude towards design thinking.
         </p>
       </div>
-    <!-- </div> -->
+    </main>
   </section>
 </body>
 </html>
