--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
 
-    <header class="content-block hero">
+  <header class="content-block hero">
     <h1>Hosting a <br>Design Thinking Workshop</h1>
     <h2>Reflections and what I learnt</h2>
     <span class="tags">UX </span><span class="tags">Design Thinking</span>
@@ -125,6 +125,6 @@
         </p>
       </div>
     </main>
-  </section>
+  <footer></footer>
 </body>
 </html>
