--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div>
+      <h5>Twitter</h5>
+      <a href="https://twitter.com/D_J_Spencer">@D_J_Spencer</a>
+    </div>
+    <div>
+      <h5>LinkedIn</h5>
+      <a href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer/</a>
+    </div>
+    <div>
+      <h5>Email</h5>
+      <a href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
+    </div>
+  </footer>
 </body>
 </html>
