--- a/index.html
+++ b/index.html
@@ -76,15 +76,15 @@
   <footer>
     <div>
       <h5>Twitter</h5>
-      <a href="https://twitter.com/D_J_Spencer">@D_J_Spencer</a>
+      <a class="link" target="_blank" href="https://twitter.com/D_J_Spencer">@D_J_Spencer</a>
     </div>
     <div>
       <h5>LinkedIn</h5>
-      <a href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer/</a>
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer/</a>
     </div>
     <div>
       <h5>Email</h5>
-      <a href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
+      <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
     </div>
   </footer>
 </body>
