--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -46,12 +46,12 @@
         <p>Before the workshop I gave the participants homework; to be aware of their next public transport journey, consider the steps one needs to take and any frustration or delight that arises on the journey. I did this to help them prepare for the workshop, to give them every chance to easily express their experiences on the topic: “How can we improve public transportation?”.
         </p>
         <h4>Intro <span>20 min</span></h4>
-        <p>As mentioned above, the participants knew each other very well so I didn’t bother with icebreaker games. I did however start with a presentation on design thinking to give an overview of what was to be undertaken slides can be found <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">here</a>. In hindsight I think it would have been more beneficial to break up the design thinking presentation throughout the workshop. For instance, talk about each stage just before actually doing each stage… e.g. Talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
+        <p>As mentioned above, the participants knew each other very well so I didn’t bother with icebreaker games. I did however start with a presentation on design thinking to give an overview of what was to be undertaken slides can be <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">found here</a>. In hindsight I think it would have been more beneficial to break up the design thinking presentation throughout the workshop. For instance, talk about each stage just before actually doing each stage… e.g. Talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
         </p>
       </div>
         <figure>
           <img class="responsive-h" src="img/slides.jpg" alt="Hand drawn plan of the room for the design thinking workshop">
-          <figcaption>Slides from the presentation on design thinking, you can view them <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">here</a>.</figcaption>
+          <figcaption>Slides from the presentation on design thinking, you can <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">view them here</a>.</figcaption>
         </figure>
       <div class="content-block">
         <h4>Empathy <span>20 min</span></h4>
@@ -132,7 +132,7 @@
       </div>
       <div>
         <h5>LinkedIn</h5>
-        <a class="link" target="_blank" href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer/</a>
+        <a class="link" target="_blank" href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer</a>
       </div>
       <div>
         <h5>Email</h5>
