--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="current" href="index.html#projects">Projects</a></li>
-      <li><a class="" href="#">About</a></li>
+      <li><a class="" href="about.html">About</a></li>
     </ul>
   </nav>
 
