--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a class="current" href="index.html">Home</a></li>
       <li><a class="" href="index.html#projects">Projects</a></li>
-      <li><a class="" href="#">About</a></li>
+      <li><a class="" href="about.html">About</a></li>
     </ul>
   </nav>
   <header class="content-block hero">
