--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="card">
       <a href="design-thinking-workshop.html">
         <div class="card-img">
-          <img src="https://via.placeholder.com/400x300" alt="">
+          <img src="img/thumb-design-thinking.svg" alt="">
         </div>
         <div class="card-text">
           <p>Design Thinking Workshop</p>
