--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -124,6 +124,20 @@
         <p>Overall I was happy with how the workshop went, particularly with the motivation and the sense of pride the participants had in the outcome of the workshop, I feel everyone came away with a positive attitude towards design thinking.
         </p>
       </div>
+      <div class="project-nav">
+        <div class="project-prev">
+          <a href="#">
+            <span class="direction">Previous</span>
+            <span class="description">Title of the previous project</span>
+          </a>
+        </div>
+        <div class="project-next">
+          <a href="#">
+            <span class="direction">Next</span>
+            <span class="description">Title of the next project</span>
+          </a>
+        </div>
+      </div>
     </main>
     <footer>
       <div>
