--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -128,13 +128,13 @@
         <div class="project-prev">
           <a href="#">
             <span class="direction">Previous</span>
-            <span class="description">Title of the previous project</span>
+            <span class="description">#6 Title of the previous project</span>
           </a>
         </div>
         <div class="project-next">
           <a href="#">
             <span class="direction">Next</span>
-            <span class="description">Title of the next project</span>
+            <span class="description">#2 Title of the next project</span>
           </a>
         </div>
       </div>
