--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -50,7 +50,7 @@
         </p>
       </div>
         <figure>
-          <img class="responsive-h" src="img/slides.jpg" alt="Hand drawn plan of the room for the design thinking workshop">
+          <img class="responsive-h" src="img/slides.png" alt="Hand drawn plan of the room for the design thinking workshop">
           <figcaption>Slides from the presentation on design thinking, you can <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">view them here</a>.</figcaption>
         </figure>
       <div class="content-block">
