--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:400,700|Roboto:300,400,700" rel="stylesheet">
-  <meta name="theme-color" content="#393f3e">
+  <meta name="theme-color" content="#C6CCCA">
 </head>
 <body>
   <nav>
