--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#C6CCCA">
 </head>
 <body>
-  <nav>
+  <nav id="nav">
     <ul>
       <li><a class="current" href="index.html">Home</a></li>
       <li><a class="" href="index.html#projects">Projects</a></li>
@@ -87,5 +87,6 @@
       <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
     </div>
   </footer>
+  <script type="text/javascript" src="js/scroll.js"></script>
 </body>
 </html>
