scroll style to other pages

--- a/about.html
+++ b/about.html
@@ -48,3 +48,6 @@
         <a class="link" href="mailto:davidjspencer@gmail.com">davidjspencer@gmail.com</a>
       </div>
     </footer>
+    <script type="text/javascript" src="js/scroll.js"></script>
+</body>
+</html>
