--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#C6CCCA">
 </head>
 <body>
-  <nav>
+  <nav id="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="" href="index.html#projects">Projects</a></li>
@@ -49,5 +49,5 @@
       </div>
     </footer>
     <script type="text/javascript" src="js/scroll.js"></script>
-</body>
+  </body>
 </html>
