--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -11,7 +11,7 @@
   <meta name="theme-color" content="#C6CCCA">
 </head>
 <body>
-  <nav>
+  <nav id="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="current" href="index.html#projects">Projects</a></li>
