--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div>
       <h5>LinkedIn</h5>
-      <a class="link" target="_blank" href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer/</a>
+      <a class="link" target="_blank" href="https://www.linkedin.com/in/david-j-spencer/">www.linkedin.com/in/david-j-spencer</a>
     </div>
     <div>
       <h5>Email</h5>
