wide img figure and storyboard upload on about page

--- a/about.html
+++ b/about.html
@@ -33,6 +33,14 @@
         </p>
         <p>More to come...</p>
       </div>
+      <figure>
+        <img class="responsive-h" src="img/sm-story-board.png" alt="Hand drawn plan of the room for the design thinking workshop">
+        <figcaption>xxx</figcaption>
+      </figure>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/sm-story-board-light.png" alt="Hand drawn plan of the room for the design thinking workshop">
+        <figcaption>xxx</figcaption>
+      </figure>
     </main>
     <footer>
       <div>
