--- a/design-thinking-workshop.html
+++ b/design-thinking-workshop.html
@@ -50,8 +50,8 @@
         <p>As mentioned above, the participants knew each other very well so I didn’t bother with icebreaker games. I did however start with a presentation on design thinking to give an overview of what was to be undertaken slides can be <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">found here</a>. In hindsight I think it would have been more beneficial to break up the design thinking presentation throughout the workshop. For instance, talk about each stage just before actually doing each stage… e.g. Talk about the Empathy stage immediately before doing the Empathy stage, talk about the Define stage immediately before doing the Define stage etc.
         </p>
       </div>
-        <figure>
-          <img class="responsive-h" src="img/slides.png" alt="Hand drawn plan of the room for the design thinking workshop">
+        <figure class="wide-image">
+          <img class="responsive-h" src="img/slides.png" alt="Picture of slides used in the workshop to describe design thinking">
           <figcaption>Slides from the presentation on design thinking, you can <a class="link" target="_blank" href="https://docs.google.com/presentation/d/14vPQm9z2a22c3lpM7YSwk3uhjfnZnHRmREvn2wgwEiI/edit?usp=sharing">view them here</a>.</figcaption>
         </figure>
       <div class="content-block">
