--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
       </a>
     </div>
     <div class="card">
-      <div class="card-img">
-        <img src="https://via.placeholder.com/400x300" alt="">
-      </div>
-      <div class="card-text">
-        <p>Placeholder project</p>
-        <span>UX</span><span>Ethnographic Research<span>
-      </div>
+      <a href="fomo-app.html">
+        <div class="card-img">
+          <img src="https://via.placeholder.com/400x300" alt="">
+        </div>
+        <div class="card-text">
+          <p>FoMO</p>
+          <span>UX</span><span>User Interviews</span><span>Branding</span>
+        </div>
+      </a>
     </div>
     <div class="card">
       <div class="card-img">
