--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <p>More to come...</p>
       </div>
       <figure>
-        <img class="responsive-h" src="img/sm-story-board.png" alt="Hand drawn plan of the room for the design thinking workshop">
+        <img class="responsive-h" src="img/sm-story-board-light.png" alt="Hand drawn plan of the room for the design thinking workshop">
         <figcaption>xxx</figcaption>
       </figure>
       <figure class="wide-image">
