persona and reorder of content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="card-text">
           <p>FoMO</p>
-          <span>UX</span><span>User Interviews</span><span>Branding</span>
+          <span>UX</span><span>User Interviews</span><span>Branding</span><span>Wireframes</span>
         </div>
       </a>
     </div>
