--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="card-text">
           <p>Design Thinking Workshop</p>
-          <span>UX</span><span>Design Thinking</span>
+          <span>Design Thinking</span>
         </div>
       </a>
     </div>
@@ -42,8 +42,8 @@
           <img src="https://via.placeholder.com/400x300" alt="">
         </div>
         <div class="card-text">
-          <p>FoMO</p>
-          <span>UX</span><span>User Interviews</span><span>Branding</span><span>Wireframes</span>
+          <p>Gr8ti-tude | Wake up happier</p>
+          <span>User Interviews </span><span>Branding </span><span>Wireframes</span>
         </div>
       </a>
     </div>
