--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img src="https://via.placeholder.com/400x300" alt="">
         </div>
         <div class="card-text">
-          <p>Gr8ti-tude | Wake up happier</p>
+          <p>Gr8t-itude | Wake up happier</p>
           <span>User Interviews </span><span>Branding </span><span>Wireframes</span>
         </div>
       </a>
