--- a/fomo-app.html
+++ b/fomo-app.html
@@ -79,7 +79,7 @@
       </figure>
       <div class="content-block">
         <h3>Research</h3>
-        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subjects; habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my full <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">notes here</a>.</p>
+        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my full <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">notes here</a>.</p>
         <h4><span>Key takeaways</span></h4>
         <ul>
           <li>FoMO starts with sadness and social media makes it worse</li>
