--- a/fomo-app.html
+++ b/fomo-app.html
@@ -35,6 +35,8 @@
         <ul>
           <li>Storyboard</li>
           <li>Persona</li>
+          <li>Mood board</li>
+          <li>Logo & branding system</li>
           <li>Wireframes</li>
         </ul>
       </div>
@@ -100,8 +102,11 @@
         <h3>Scenario</h3>
         <p>Once in bed, Maria uses Gr8t-itude to set her alarm and then choose 3 things she is grateful for. The trigger of setting the alarm helps the act of gratitude easily become a habit. The Gr8t-itude alarm reinforces Maria's happiness in the morning by waking her up and making her reflect on what she is grateful for.</p>
         <p>By practising gratitude, Maria will be thankful and happy with what she has achieved and experienced, making her immune to FoMO and increasing her general happiness.</p>
-        <!-- <p>To break one of the triggers observed in the participants, the alarm clock, Gr8-itude also functions as an alarm to increase Maria's gratitude when setting her alarm and reinforcing this act when turning her alarm off in the morning.</p> -->
       </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/Maria-fomo-storyboard.png" alt="Picture of Maria using Gr8-itude">
+        <figcaption>Maria using Gr8t-itude to make her happier and combat FoMO</figcaption>
+      </figure>
       <div class="content-block">
         <h3>xxx</h3>
         <p>xxx</p>
