--- a/fomo-app.html
+++ b/fomo-app.html
@@ -108,6 +108,14 @@
         <figcaption>Maria using Gr8t-itude to make her happier and combat FoMO</figcaption>
       </figure>
       <div class="content-block">
+        <h3>Mood board</h3>
+        <!-- <p>xxx</p> -->
+      </div>
+      <figure class="wide-image">
+        <img class="responsive-h" src="img/gr8t-itude-mood-board.png" alt="Picture a mood board for Gr8-itude">
+        <figcaption>Gr8t-itude mood board</figcaption>
+      </figure>
+      <div class="content-block">
         <h3>xxx</h3>
         <p>xxx</p>
       </div>
