--- a/fomo-app.html
+++ b/fomo-app.html
@@ -23,7 +23,7 @@
     <!-- <h1>Under construction</h1> -->
     <h1>Gr8t-itude</h1>
     <h2>Wake up happier</h2>
-    <span class="tags">UX </span><span class="tags">User Interviews</span><span>Branding</span><span>Wireframes</span>
+    <span class="tags">UX </span><span class="tags">User Interviews</span><span class="tags">Branding</span><span class="tags">Wireframes</span>
   </header>
 
     <!-- <div class="container"> -->
