MoSCoW and anchor text

--- a/fomo-app.html
+++ b/fomo-app.html
@@ -51,7 +51,7 @@
       </figure>
       <div class="content-block">
         <h3>Interviews</h3>
-        <p>I interviewed 3 people to find out about their smartphone habits and asked them about suffering from FoMO in general. At the end of the interview I gave the participants a survey which was based upon the work of Przybyzlski and colleagues (2013). This was to ascertain how the people fit onto the FoMO Scale, established by said researchers. Each interviewee fit into the category of suffering from a medium level if FoMO. My research plan can be <a class="link" href="https://docs.google.com/document/d/1BqhFUpJ3KJCYWDPhwDC3fTTMMBcoGi8pZlWOGUncTvc/edit?usp=sharing">viewed here</a>.</p>
+        <p>I interviewed 3 people to find out about their smartphone habits and asked them about suffering from FoMO in general. At the end of the interview I gave the participants a survey which was based upon the work of Przybyzlski and colleagues (2013). This was to ascertain how the people fit onto the FoMO Scale, established by said researchers. Each interviewee fit into the category of suffering from a medium level if FoMO. My <a class="link" href="https://docs.google.com/document/d/1BqhFUpJ3KJCYWDPhwDC3fTTMMBcoGi8pZlWOGUncTvc/edit?usp=sharing">research plan</a> is available to view.</p>
         <h4><span>Key takeaways from the interviews</span></h4>
         <ul>
           <li>People feel they use their phones/social media too much</li>
@@ -81,7 +81,7 @@
       </figure>
       <div class="content-block">
         <h3>Research</h3>
-        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my full <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">notes here</a>.</p>
+        <p>I wanted to combat FoMO by looking at the problem through the eyes of behavioural scientists. For definitions and health dangers of FoMO I researched Przybyzlski et al and Elisa Wegmanna et al. Which led me to focus on the subject of habits and controlling habits exemplified by Eric Barker, Shawn Achor, BJ Fogg and Nir Eyal. You can see my <a class="link" href="https://docs.google.com/document/d/1PBuUQ7gjNwX8BGDxe8whmgnmK221eOKFXJ-LW_Nl6TE/edit?usp=sharing">research notes here</a>.</p>
         <h4><span>Key takeaways</span></h4>
         <ul>
           <li>FoMO starts with sadness and social media makes it worse</li>
@@ -112,13 +112,17 @@
         <!-- <p>xxx</p> -->
       </div>
       <figure class="wide-image">
-        <img class="responsive-h" src="img/gr8t-itude-mood-board.png" alt="Picture a mood board for Gr8-itude">
+        <img class="responsive-h" src="img/gr8t-itude-mood-board.png" alt="Picture of a mood board for Gr8-itude">
         <figcaption>Gr8t-itude mood board</figcaption>
       </figure>
       <div class="content-block">
         <h3>xxx</h3>
         <p>xxx</p>
       </div>
+      <figure class="">
+        <img class="responsive-h" src="img/fomo-MoSCoW.png" alt="Picture of a MoSCoW analysis">
+        <figcaption>MoSCoW analysis</figcaption>
+      </figure>
     </main>
 
     <footer>
