lofi wireframes img

--- a/fomo-app.html
+++ b/fomo-app.html
@@ -116,12 +116,20 @@
         <figcaption>Gr8t-itude mood board</figcaption>
       </figure>
       <div class="content-block">
-        <h3>xxx</h3>
+        <h3>MoSCoW</h3>
         <p>xxx</p>
       </div>
       <figure class="">
         <img class="responsive-h" src="img/fomo-MoSCoW.png" alt="Picture of a MoSCoW analysis">
         <figcaption>MoSCoW analysis</figcaption>
+      </figure>
+      <div class="content-block">
+        <h3>Lo-Fi Wireframes</h3>
+        <p>xxx</p>
+      </div>
+      <figure class="">
+        <img class="responsive-h" src="img/fomo-app-lofi-wireframes.png" alt="Picture of Lo-Fi Wireframes">
+        <figcaption>Lo-Fi Wireframes made out of post-it notes.</figcaption>
       </figure>
     </main>
 
