--- a/fomo-app.html
+++ b/fomo-app.html
@@ -21,7 +21,7 @@
 
   <header class="content-block hero">
     <!-- <h1>Under construction</h1> -->
-    <h1>Gr8t-itude</h1>
+    <h1>Gr8ti-tude</h1>
     <h2>Wake up happier</h2>
     <span class="tags">UX </span><span class="tags">User Interviews</span><span class="tags">Branding</span><span class="tags">Wireframes</span>
   </header>
@@ -100,20 +100,20 @@
       </div>
       <div class="content-block">
         <h3>Scenario</h3>
-        <p>Once in bed, Maria uses Gr8t-itude to set her alarm and then choose 3 things she is grateful for. The trigger of setting the alarm helps the act of gratitude easily become a habit. The Gr8t-itude alarm reinforces Maria's happiness in the morning by waking her up and making her reflect on what she is grateful for.</p>
+        <p>Once in bed, Maria uses Gr8ti-tude to set her alarm and then choose 3 things she is grateful for. The trigger of setting the alarm helps the act of gratitude easily become a habit. The Gr8ti-tude alarm reinforces Maria's happiness in the morning by waking her up and making her reflect on what she is grateful for.</p>
         <p>By practising gratitude, Maria will be thankful and happy with what she has achieved and experienced, making her immune to FoMO and increasing her general happiness.</p>
       </div>
       <figure class="wide-image">
         <img class="responsive-h" src="img/Maria-fomo-storyboard.png" alt="Picture of Maria using Gr8-itude">
-        <figcaption>Maria using Gr8t-itude to make her happier and combat FoMO</figcaption>
+        <figcaption>Maria using Gr8ti-tude to make her happier and combat FoMO</figcaption>
       </figure>
       <div class="content-block">
         <h3>Mood board</h3>
         <!-- <p>xxx</p> -->
       </div>
       <figure class="wide-image">
-        <img class="responsive-h" src="img/gr8t-itude-mood-board.png" alt="Picture of a mood board for Gr8-itude">
-        <figcaption>Gr8t-itude mood board</figcaption>
+        <img class="responsive-h" src="img/Gr8ti-tude-mood-board.png" alt="Picture of a mood board for Gr8-itude">
+        <figcaption>Gr8ti-tude mood board</figcaption>
       </figure>
       <div class="content-block">
         <h3>MoSCoW</h3>
@@ -127,7 +127,7 @@
         <h3>Lo-Fi Wireframes</h3>
         <p>xxx</p>
       </div>
-      <figure class="">
+      <figure class="wide-image">
         <img class="responsive-h" src="img/fomo-app-lofi-wireframes.png" alt="Picture of Lo-Fi Wireframes">
         <figcaption>Lo-Fi Wireframes made out of post-it notes.</figcaption>
       </figure>
