--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="card">
       <a href="fomo-app.html">
         <div class="card-img">
-          <img src="https://via.placeholder.com/400x300" alt="">
+          <img src="img/Gr8ti-tude_Logo-30.svg" alt="">
         </div>
         <div class="card-text">
           <p>Gr8ti-tude:<br>Wake up happier</p>
