--- a/fomo-app.html
+++ b/fomo-app.html
@@ -46,8 +46,8 @@
         <p>xxx</p>
       </div>
       <figure class="wide-image">
-        <img class="responsive-h" src="https://via.placeholder.com/800x400" alt="Picture of a storyboard of social media use and our sleeping habits">
-        <figcaption>Storyboard of social media use and our sleeping habits</figcaption>
+        <img class="responsive-h" src="img/Gr8ti-tude-iso-screens.jpg" alt="Picture of some of the screens of Gr8ti-tude">
+        <figcaption>xxx</figcaption>
       </figure>
       <div class="content-block">
         <h3>Interviews</h3>
